--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script src="https://kit.fontawesome.com/c0565cd6ff.js" crossorigin="anonymous"></script>
 
 <!-- Google Fonts  -->
-<<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700&family=Quicksand&display=swap" rel="stylesheet">
 
@@ -86,6 +86,8 @@
     </ul>
 <body>
     <div class="container">
+        <!-- <img src="img/biden-trump.jpeg" alt="Snow" style="width:100%">
+        <h6>Image credit: Politico</h6> -->
         <hr>
         <div class="headline">
           <h1> Recreating a map of counties' dominant economic activity and US police brutality </h1>
@@ -95,8 +97,7 @@
         <p>The Economic Research Service of the US Department of Agriculture developed the County Typology Codes to offer insight into dominant economic activity at the county level.</p>
         <p>It is believed that an area’s economic and social characteristics have a significant part impact on its development as well as need for various types of public programs.</p>
         
-        <p>The most recent <a href="https://www.ers.usda.gov/data-products/county-typology-codes.aspx"> County Typology Codes, 2015 edition</a>, classify all counties according to six mutually exclusive categories. Another classification is made via economic 
-          dependence types include farming, mining, manufacturing, Federal/State government, recreation, and nonspecialized counties.</p>
+        <p>The most recent <a href="https://www.ers.usda.gov/data-products/county-typology-codes.aspx"> County Typology Codes, 2015 edition</a>, classify all counties according to six mutually exclusive categories. Another classification is made via economic dependence types include farming, mining, manufacturing, Federal/State government, recreation, and nonspecialized counties.</p>
         <p>The first choropleth map visualizes these counties and the dominant economic activity. At the state level, it displays which the economic classification which is most common among counties within the state.</p>
         <p>The second map visualizes incidents of police brutality using a dotted map. The data is collected by the organization 2020PoliceBrutality with assistance from the public.
         <p>The project which was inspired by the killing of George Floyd in 2020, is intended to shine a light on the state of policing in America, the group said on its <a href="https://2020pb.com/#mid-content">website.</a></p>
@@ -117,7 +118,7 @@
             <div><span style="background-color: #FE5D26"></span>Recreation</div>
             <div><span style="background-color: #F2C078"></span>Mining</div>
             <hr>
-            <p>Source of data: <a href="https://www.ers.usda.gov/data-products/county-typology-codes.aspx">2020pb.com</a></p>
+            <p>Source of data: <a href="https://www.ers.usda.gov/data-products/county-typology-codes.aspx">www.ers.usda.gov</a></p>
         </div>
     </div>
     </div>
